agrego al practica de la sinopsis de la pelicula

--- a/clase02/preview.html
+++ b/clase02/preview.html
@@ -7,7 +7,7 @@
   <title>Clase 2 | Preview</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una sinopsis de una pelicula.">
-  <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/ios-glyphs/30/000000/cinema---v1.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
@@ -15,21 +15,49 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una sinopsis de una pelicula.">
   <meta property="og:image" name="twitter:image"
-    content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
+    content="https://img.icons8.com/ios-glyphs/30/000000/cinema---v1.png">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/preview.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/000000/cinema---v1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS PREVIEW -->
+  <link rel="stylesheet" href="../styles/preview.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Blog con imagenes</h1>
+    <h1>Un golpe con estilo</h1>
   </header>
   <!-- MAIN -->
   <main>
+    <section class="elenco">
+      <img src="../assets/images/un-golpe-con-estilo.jpg" alt="Un golpe con estilo" widht="64" height="90">
+      <h2>Elenco</h2>
+      <ul>
+        <li><a href="https://www.imdb.com/name/nm0000323/?ref_=ttfc_fc_cl_t1" target="_blank" rel="noopener noreferrer">Michael Caine</a></li>
+        <li><a href="https://www.imdb.com/name/nm0000151/?ref_=ttfc_fc_cl_t8" target="_blank" rel="noopener noreferrer">Morgan Freeman</a></li>
+        <li><a href="https://www.imdb.com/name/nm0000273/?ref_=ttfc_fc_cl_t2" target="_blank" rel="noopener noreferrer">Alan Arkin</a></li>
+        <li><a href="https://www.imdb.com/name/nm0000502/?ref_=ttfc_fc_cl_t6" target="_blank" rel="noopener noreferrer">Christopher Lloyd</a></li>
+        <li><a href="https://www.imdb.com/name/nm0000268/?ref_=ttfc_fc_cl_t3" target="_blank" rel="noopener noreferrer">Ann-Margaret</a></li>
+      </ul>
+    </section>
+    <section class="sinopsis">
+      <h3>Sinopsis</h3>
+      <p>Tres personas mayores, que han sido perjudicadas por la empresa en la que trabajaron durante treinta años y viven cheque por cheque de la seguridad social, deciden que ya han tenido suficiente.</p>
+      <p>Entonces, planean robar el banco que está tomando el dinero de su pensión. Joe Harding (Sir Michael Caine), un hombre que vive con su hija y su nieta, con quienes tiene una fuerte relación, está teniendo problemas con su hipoteca.</p>
+      <p>Willy Davis (Morgan Freeman), vive muy lejos de la única familia que tiene pero necesita desesperadamente una operación de riñón.</p>
+      <p>Albert Gardner (Alan Arkin), un anciano gruñón que hace mucho tiempo tocaba el saxofón y coquetea constantemente con la abuela de su alumno.</p>
+      <p>El problema es que ni siquiera saben cómo manejar un arma.</p>
+    </section>
+    <section class="generos">
+      <h3>Generos</h3>
+      <ul>
+        <li><a href="https://www.imdb.com/search/title/?genres=Comedy&explore=title_type,genres&ref_=tt_ov_inf" target="_blank" rel="noopener noreferrer">Comedia</a></li>
+        <li><a href="https://www.imdb.com/search/title/?genres=Crime&explore=title_type,genres&ref_=tt_ov_inf" target="_blank" rel="noopener noreferrer">Crimen</a></li>
+      </ul>
+    </section>
 
   </main>
 
