completo la practica de los comentarios

--- a/clase02/comentarios.html
+++ b/clase02/comentarios.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS COMENTARIOS -->
+  <link rel="stylesheet" href="../styles/comentarios.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -30,9 +32,34 @@
   </header>
   <!-- MAIN -->
   <main>
-
+    <section class="texto">
+      <p><strong>6 hábitos para aumentar la energía</strong></p>
+      <p><strong>1 - ir a dormir temprano</strong>: dormir es la base de tu energía, si no duermes la suficiente comenzarás a tener un rendimiento inferior.</p>
+      <p><strong>2- siestas cortas</strong>: una siesta de 20 minutos te llenará de energías para el trabajo de la tarde, cuando normalemnte estarías exhausto.</p>
+      <p><strong>3- planifica tus tareas</strong>: antes de acostarte, escribe tu plan para el día sigueinte y visualizalo.</p>
+      <p><strong>4- lee o escucha</strong>: siempre ten un libro o audiolibro que te motive a trabajar en tus objetivos.</p>
+      <p><strong>5- haz tu trabajo duro primero</strong>: has de las primeras cuatro horas de su jornada las más productivas de tu día.</p>
+      <p><strong>6- ejericicio todos los dias</strong>: Hacer ejercicio te mandendrá alerta durante todo el día y hará que pienses con claridad..</p>
+    </section>
+    <section class="comentarios">
+      <h2>Comentarios</h2>
+      <h3>@ada_lovelace<img src="https://img.icons8.com/bubbles/50/000000/ada-lovelace.png"/ alt="dibujo de una señora con estrellas como si fuera un hada" width="50" height="50"></h3>
+        <span>Publicado hace 1h.</span>
+        <p>👌Muy buenos consejos 👌</p>
+      <h3>@el_guitarrista <img src="https://img.icons8.com/emoji/48/000000/guitar-emoji.png" alt="guitarra" width="48" height="48"/></h3>
+        <span>Publicado hace 1h. 10min.</span>
+        <p>Yo soy de los que hacen ejercicios todos los días 🏃🏼‍♂️</p>
+      <h3>@la_artista <img src="https://img.icons8.com/emoji/48/000000/artist-palette.png" alt="paleta de colores" width="48" height="48"/></h3>
+        <span>Publicado hace 1h. 15min.</span>
+        <p>Soy amante de las sistas 👏🏼</p>
+      <h3>@jockey_lover <img src="https://img.icons8.com/emoji/48/000000/field-hockey-emoji.png" alt="palo de jockey con pelota" width="48" height="48"/></h3>
+        <span>Publicado hace 1h. 30min.</span>
+        <p>Yo también soy del team #sports 💪🏼</p>
+      <h3>@bowling_champion<img src="https://img.icons8.com/emoji/48/000000/bowling-emoji.png" alt="bola y palos de sowling" width="48" height="48"/></h3>
+        <span>Publicado hace 1h. 36min.</span>
+        <p>Siempre estoy con mi agenda a mano, siempre planificando 📒</p>
+    </section>
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
