agrego la practica de la tienda

--- a/clase02/productos.html
+++ b/clase02/productos.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS PRODUCTOS -->
+  <link rel="stylesheet" href="../styles/productos.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -30,9 +32,47 @@
   </header>
   <!-- MAIN -->
   <main>
-
+    <section class="mas-comprados">
+      <h2>Productos más comprados</h2>
+    </section>
+    <section class="cards">
+      <section class="card">
+        <img src="../assets/images/laptop.jpg" alt="computadora portatil">
+        <h3>Computadora Portatil</h3>
+        <span>Lenovo</span><span>Dell</span><span>Bangho</span>
+        <p>Desde $ 180.000.-</p>
+        <p>Hacenos tu consulta, tenemos variedad de marcas y opciones.</p>
+      </section>
+      <section class="card">
+        <img src="../assets/images/keyboard.jpg" alt="teclado">
+        <h3>Teclado</h3>
+        <span>Negro</span><span>Gris</span><span>Blanco</span>
+        <p>Desde $ 1.200.-</p>
+        <p>Podemos personalizarlo.</p>
+      </section>
+      <section class="card">
+        <img src="../assets/images/auriculares.jpg" alt="auriculares inalambricos negros">
+        <h3>Auriculares</h3>
+        <span>Negro</span><span>blanco</span><span>Gris</span>
+        <p>Desde $ 900.-</p>
+        <p>Hay modelos inalámbricos y con cable.</p>
+      </section>
+      <section class="card">
+        <img src="../assets/images/mouse.jpg" alt="mouse">
+        <h3>Mouse</h3>
+        <span>Blanco</span><span>Negro</span><span>Rojo</span>
+        <p>Desde $ 600.-</p>
+        <p>También tenemos ergonómicos. Consultanos.</p>
+      </section>
+      <section class="card">
+        <img src="../assets/images/enchufes.jpg" alt="anchufes">
+        <h3>Estabilizador</h3>
+        <span>Blanco</span><span>Negro</span><span>Gris</span>
+        <p>Desde $ 2.500.-</p>
+        <p>Protege tus electronicos ante baja de tensión elécrica.</p>
+      </section>
+    </section>
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
