--- a/clase02/tareas.html
+++ b/clase02/tareas.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS TAREAS -->
+  <link rel="stylesheet" href="../styles/tareas.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -30,9 +32,18 @@
   </header>
   <!-- MAIN -->
   <main>
-
+    <section class="subtitulo">
+      <h2>Tareas para hoy <span class="fecha">22 de Mayo</span></h2>
+    </section>
+    <section class="tareas">
+      <h3>Pasear al perro <span class="haciendo">Haciendo</span></h3>
+      <h3>Ir al banco<span class="pendiente">Pendiente</span></h3>
+      <h3>Ir a natación <span class="hecha">Hecha</span></h3>
+      <h3>Cocinar el almuerzo<span class="hecha">Hecha</span></h3>
+      <h3>Ordenar la casa<span class="hecha">Hecha</span></h3>
+      <h3>Ir a buscar el pedido<span class="cancelada">Cancelada</span></h3>
+    </section>
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
