--- a/clase02/reacciones.html
+++ b/clase02/reacciones.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 2 | REacciones</title>
+  <title>Clase 2 | Reacciones</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso comentarios con reacicones.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
@@ -22,17 +22,40 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS REACCIONES -->
+  <link rel="stylesheet" href="../styles/reacciones.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Reacciones</h1>
+    <h1>Practica</h1>
   </header>
   <!-- MAIN -->
   <main>
-
+    <section class="comentarios">
+      <h2>Comentarios</h2>
+      <h3><a href="#">@ada_lovelace</a></h3>
+      <p>Hace 2min. </p>
+      <p>El mejor momento del día es cuando vuelvo a casa y me está esperando mi 🐶.</p>
+      <span>❤️ 200</span>|<span>👍 150</span>|<span>👏 310</span>|<span>🔥 500</span>
+      <h3><a href="#">@el_guitarrista</a></h3>
+      <p>Hace 7min.</p>
+      <p>Mi mejor momento del día es cuando estoy cenando en familia 👨‍👩‍👧‍👦.</p>
+      <span>❤️ 120</span>|<span>👍 80</span>|<span>👏 290</span>|<span>🔥 20</span>
+      <h3><a href="#">@la_artista</a></h3>
+      <p>Hace 10min.</p>
+      <p>Lo mejor es desayunar con mi #Nespresso ☕ y medialunas🥐.</p>
+      <span>❤️ 82</span>|<span>👍 42</span>|<span>👏 38</span>|<span>🔥 10</span>
+      <h3><a href="#">@jockey_lover</a></h3>
+      <p>Hace 23min.</p>
+      <p>EL mejor momento es sentarse a escuchar música 🎵.</p>
+      <span>❤️ 95</span>|<span>👍 60</span>|<span>👏 3</span>|<span>🔥 48</span>
+      <h3><a href="#">@bowling_champion</a></h3>
+      <p>Hace 45min.</p>
+      <p>El mejor momento de mi día es ir al gym a practicar box 🥊.</p>
+      <span>❤️ 20</span>|<span>👍 4</span>|<span>👏 30</span>|<span>🔥 5</span>
+    </section>
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
