practic de cuenta bancaria

--- a/clase02/cuenta-bancaria.html
+++ b/clase02/cuenta-bancaria.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS CUENTA BANCARIA -->
+  <link rel="stylesheet" href="../styles/cuenta-bancaria.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -30,9 +32,23 @@
   </header>
   <!-- MAIN -->
   <main>
-
+    <h2>Últimos movimientos</h2>
+    <h3>Depósito</h3>
+      <p class="fecha">20 / 05 / 2022</p>
+      <p class="entrada">+ 60.000</p>
+    <h3>Transferencia a Paula</h3>
+      <p class="fecha">20 / 05 / 2022</p>
+      <p class="salida">- 5.000</p>
+    <h3>Pago Hipermercado</h3>
+      <p class="fecha">21 / 05 / 2022</p>
+      <p class="salida">- 8.000</p>
+    <h3>Depósito</h3>
+      <p class="fecha">22/ 05 / 2022</p>
+      <p class="entrada">+ 5.400</p>    
+    <h3>Transferencia a Diego</h3>
+      <p class="fecha">23 / 05 / 2022</p>
+      <p class="salida">- 3.700</p>
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
