--- a/clase02/index.html
+++ b/clase02/index.html
@@ -102,7 +102,7 @@
     </section>
     <!-- CUENTA BANCARIA-->
     <section id="cuenta-bancaria">
-      <a href="./presentacion-modo-oscuro.html" target="_blank" rel="noopener noreferrer">Cuenta bancaria</a>
+      <a href="./cuenta-bancaria.html" target="_blank" rel="noopener noreferrer">Cuenta bancaria</a>
     </section>
     <!-- TAREAS -->
     <section id="tareas">
