continuo con la practica de la segunda clase

--- a/clase02/peliculas-populares.html
+++ b/clase02/peliculas-populares.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 2 | Peliculas</title>
+  <title>Clase 2 | Peliculas Populares</title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso con peliculas.">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso con peliculas populares.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase2 | Peliculas">
+  <meta property="og:title" name="twitter:title" content="Clase2 | Peliculas Populares">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso con peliculas.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso con peliculas populares.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/peliculas.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/peliculas-populares.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
@@ -28,16 +28,27 @@
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Bienvenida a mis peliculas</h1>
+    <h1>Peliculas Populares</h1>
   </header>
   <!-- MAIN -->
   <main>
-    <section class="links-paginas">
+    <section class="peliculas-populares">
+      <p>Las películas más exitosas en los últimos tiempo</p>
+      <h2>Películas</h2>
+      <h3>Top 5</h3>
       <ul>
-        <li><a href="./peliculas-populares.html" alt="link a populares">Populares</a></li>
-        <li><a href="./peliculas-top-3.html" target="_blank" alt="link a populares">Top 3</a></li>
-        <li><a href="./peliculas-mas-recaudacion.html" alt="link a populares">Con más recaudación</a></li>
+        <li>El Padrino (1972)</li>
+        <li> El señor de los anillos: La comunidad del anillo (2001)</li>
+        <li>Matrix (1999)</li>
+        <li>La vida es bella (1997)</li>
+        <li>Amigos intocables (2011)</li>
       </ul>
+
+    </section>
+    <section class="volver">
+      <button> 
+        <a href="./peliculas.html">Volver atrás</a>
+        </button>
     </section>
 
   </main>
