--- a/clase02/index.html
+++ b/clase02/index.html
@@ -62,7 +62,7 @@
     </section>
     <!-- CANCIONES -->
     <section id="canciones">
-      <a href="./peliculas.html" target="_blank" rel="noopener noreferrer">Canciones</a>
+      <a href="./canciones.html" target="_blank" rel="noopener noreferrer">Canciones</a>
     </section>
     <!-- ARTICULO COMPLETO -->
     <section id="articulo-completo">
