--- a/clase02/peliculas-populares.html
+++ b/clase02/peliculas-populares.html
@@ -19,7 +19,7 @@
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/peliculas-populares.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/material/48/fa314a/cinema---v1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
   <!-- CSS PELICULAS -->
@@ -36,13 +36,33 @@
       <p>Las películas más exitosas en los últimos tiempo</p>
       <h2>Películas</h2>
       <h3>Top 5</h3>
-      <ul>
-        <li>El Padrino (1972)</li>
-        <li> El señor de los anillos: La comunidad del anillo (2001)</li>
-        <li>Matrix (1999)</li>
-        <li>La vida es bella (1997)</li>
-        <li>Amigos intocables (2011)</li>
-      </ul>
+      <ol>
+        <li>
+          <img src="../assets/images/el-padrino.jpg" width="45" height="64" alt="tapa de pelicula El padrino">
+          <h3>El Padrino</h3>
+          <p>(1972)</p>
+        </li>
+        <li> 
+          <img src="../assets/images/la-comunidad-del-anillo_.jpg" width="45" height="67" alt="portada de la pelicula El señor de los anillos: La comunidad del anillo">
+          <h3>El señor de los anillos: La comunidad del anillo</h3>
+          <p>(2001)</p>
+        </li>
+        <li>
+          <img src="../assets/images/matrix.jpg"  width="45" height="67" alt="portada de la pelicula Matrix">
+          <h3>Matrix</h3> 
+          <p>(1999)</p>
+        </li>
+        <li>
+          <img src="../assets/images/la-vida-es-bella.jpg"  width="45" height="67" alt="portada de la pelicula La vida es bella">
+          <h3>La vida es bella</h3>
+          <p>(1997)</p>
+        </li>
+        <li>
+          <img src="../assets/images/amigos-intocables.jpg"   width="45" height="67" alt="portada de la pelicula Amigos intocables">
+          <h2>Amigos intocables</h2> 
+          <p>(2011)</p>
+        </li>
+      </ol>
 
     </section>
     <section class="volver">
