--- a/clase02/canciones-boa-sorte.html
+++ b/clase02/canciones-boa-sorte.html
@@ -32,21 +32,21 @@
   <main>
     <section class="canciones">
       <aside class="cancion1">
-        <a href="./canciones-stronger.html" alt="link a la pagina de la cancion">
+        <a href="" alt="link a la pagina de la cancion">
           <img src="../assets/images/stronger.jpg" width="300" height="225" alt="cancion de Clean Bandit Stronges">
           <h2>Stronger</h2>
           <p>Clean Bandit feat. Alex Newell & Sean Bass</p>
         </a>
       </aside>
       <aside class="cancion2">
-        <a href="./canciones-boa-sorte.html" alt="link a la pagina de la cancion">
+        <a href="" alt="link a la pagina de la cancion">
           <img src="../assets/images/boa-sorte.jpg" height="250" width="250" alt="imagen de Ben HArper y Vanessa Da Mata">
           <h2>Boa Sorte</h2>
           <p>Ben Harper & Vanesa Da Mata</p>
         </a>
       </aside>
       <aside class="cancion3">
-        <a href="./canciones-bautiful-day.html" alt="link a la pagina de la cancion">
+        <a href="" alt="link a la pagina de la cancion">
           <img src="../assets/images/beautiful-day.jpg" width="355" height="313" alt="imagen de u2 del video clip de la cancion Beautiful day">
           <h2>Beautiful Day</h2>
           <p>U2</p>
