corrijo el readme y agrego la practica de la clase dos las canciones

--- a/clase02/canciones-boa-sorte.html
+++ b/clase02/canciones-boa-sorte.html
@@ -4,54 +4,103 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 2 | Mis canciones favoritas</title>
+  <title>Clase 2 | Boa Sorte</title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas.">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas: Boa Sorte.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase2 | Mis canciones favoritas">
+  <meta property="og:title" name="twitter:title" content="Clase2 | Boa Sorte">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas: Boa Sorte.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/material/24/fa314a/photos-folder--v1.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/canciones.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/canciones-boa-sorte.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/material/24/fa314a/photos-folder--v1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/canciones.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Mis canciones favoritas</h1>
+    <h1>Boa Sorte</h1>
   </header>
   <!-- MAIN -->
   <main>
-    <section class="canciones">
-      <aside class="cancion1">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/stronger.jpg" width="300" height="225" alt="cancion de Clean Bandit Stronges">
-          <h2>Stronger</h2>
-          <p>Clean Bandit feat. Alex Newell & Sean Bass</p>
-        </a>
-      </aside>
-      <aside class="cancion2">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/boa-sorte.jpg" height="250" width="250" alt="imagen de Ben HArper y Vanessa Da Mata">
-          <h2>Boa Sorte</h2>
-          <p>Ben Harper & Vanesa Da Mata</p>
-        </a>
-      </aside>
-      <aside class="cancion3">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/beautiful-day.jpg" width="355" height="313" alt="imagen de u2 del video clip de la cancion Beautiful day">
-          <h2>Beautiful Day</h2>
-          <p>U2</p>
-        </a>
-      </aside>
+    <section class="boa-sorte">
+      <span>Ben Harper & Vanesa Da Mata</span>
+      <span>Sim</span>
+      <span>2007</span>
+      <h2>Letra</h2>
+      <p>É só isso</p>
+      <p>Não tem mais jeito</p>
+      <p>Acabou</p>
+      <p class="pb-2">Boa sorte</p>
+      <p>Não tenho o que dizer</p>
+      <p>São só palavras</p>
+      <p>E o que eu sinto</p>
+      <p class="pb-2">Não mudará</p>
+      <p>Tudo o que quer me dar</p>
+      <p>É demais</p>
+      <p>É pesado</p>
+      <p class="pb-2">Não há paz</p>
+      <p>Tudo o que quer de mim</p>
+      <p>Irreais</p>
+      <p>Expectativas</p>
+      <p class="pb-2">Desleais</p>
+      <p>Well, that's it</p>
+      <p>There's no way</p>
+      <p>It's over</p>
+      <p class="pb-2">Good luck</p>
+      <p>I have nothing left to say</p>
+      <p>It's only words</p>
+      <p>And what l feel</p>
+      <p class="pb-2">Won't change</p>
+      <p>Tudo o que quer me dar (everything you want to give me)</p>
+      <p>É demais</p>
+      <p>É pesado (it's too much)</p>
+      <p class="pb-2">Não há paz (it's heavy)</p>
+      <p>Tudo o que quer de mim (there's no peace)</p>
+      <p>Irreais (all you want from me)</p>
+      <p>Expectativas (isn't real expectations)</p>
+      <p class="pb-2">Desleais</p>
+      <p>Mesmo se segure</p>
+      <p>Quero que se cure</p>
+      <p>Dessa pessoa</p>
+      <p class="pb-2">Que o aconselha</p>
+      <p>Há um desencontro</p>
+      <p>Veja por esse ponto</p>
+      <p class="pb-2">Há tantas pessoas especiais</p>
+      <p>Now even if you hold yourself</p>
+      <p>I want you to get cured</p>
+      <p class="pb-2">From this person who advises you</p>
+      <p>There is a disconnection</p>
+      <p>See through this point of view</p>
+      <p>There are so many special people in the world</p>
+      <p>So many special people in the world, in the world</p>
+      <p class="pb-2">All you want, all you want</p>
+      <p>Tudo o que quer me dar (everything you want to give me)</p>
+      <p>É demais</p>
+      <p>É pesado (it's too much)</p>
+      <p class="pb-2">Não há paz (it's heavy)</p>
+      <p>Tudo o que quer de mim (there's no peace)</p>
+      <p>Irreais (all you want from me)</p>
+      <p>Expectativas (isn't real expectations)</p>
+      <p class="pb-2">Desleais</p>
+      <p>Now we're falling, falling</p>
+      <p>Into the night, into the night</p>
+      <p>Falling, falling</p>
+      <p class="pb-2">Into the night, into the night (um bom encontro é de dois)</p>
+      <p>Falling, falling</p>
+      <p>Into the night, into the night</p>
+      <p class="pb-2">Falling, falling</p>
+    </section>
+    <section class="volver">
+      <a href="./canciones.html">Volver atras</a>
     </section>
   </main>
   <footer>
