--- a/clase02/canciones-stronger.html
+++ b/clase02/canciones-stronger.html
@@ -32,39 +32,65 @@
   </header>
   <!-- MAIN -->
   <main>
-    <section class="canciones">
-      <aside class="cancion1">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/stronger.jpg" width="300" height="225" alt="cancion de Clean Bandit Stronges">
-          <h2>Stronger</h2>
-          <p>Clean Bandit feat. Alex Newell & Sean Bass</p>
-        </a>
-      </aside>
-      <aside class="cancion2">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/boa-sorte.jpg" height="250" width="250" alt="imagen de Ben HArper y Vanessa Da Mata">
-          <h2>Boa Sorte</h2>
-          <p>Ben Harper & Vanesa Da Mata</p>
-        </a>
-      </aside>
-      <aside class="cancion3">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/beautiful-day.jpg" width="355" height="313" alt="imagen de u2 del video clip de la cancion Beautiful day">
-          <h2>Beautiful Day</h2>
-          <p>U2</p>
-        </a>
-      </aside>
+    <section class="stronger">
+      <p>People tell me to be cautious</p>
+      <p>People tell me not to lose my self control</p>
+      <p>People tell me to be flawless</p>
+      <p class="pb-2">People tell me not to let myself evolve</p>
+      <p>And I think I don't really get it</p>
+      <p>I think it's all just a peculiar game</p>
+      <p>And soon I'll wake up and I'll forget it</p>
+      <p class="pb-2">And everyone will know me by a different name</p>
+      <p>I wanted to be stronger</p>
+      <p>I wanted to be everything for you</p>
+      <p>If I could be stronger would you believe</p>
+      <p class="pb-2">That I could love you like you want me to?</p>
+      <p>Love me like you want me to</p>
+      <p>Like you want me to</p>
+      <p>Love me like you want me to</p>
+      <p class="pb-2">Like you want me to</p>
+      <p>I held my breath every time</p>
+      <p>I tried to keep myself dry</p>
+      <p>But did I ask too much?</p>
+      <p>If I could do it again</p>
+      <p>Would you believe what I said</p>
+      <p class="pb-2">That I still want that rush</p>
+      <p>And I think I don't really get it</p>
+      <p>I think it's all just a peculiar game</p>
+      <p>And soon I'll wake up and I'll forget it</p>
+      <p class="pb-2">And everyone will know me by a different name</p>
+      <p>I wanted to be stronger</p>
+      <p>I wanted to be everything for you</p>
+      <p>If I could be stronger would you believe</p>
+      <p class="pb-2">That I could love you like you want me to?</p>
+      <p>I want to be strong for you, oh</p>
+      <p>(Love me like you want me to, like you want me to)</p>
+      <p>I want be strong for you</p>
+      <p>(Love me like you want me to)</p>
+      <p>I want be strong for you</p>
+      <p>And I can, yes I can</p>
+      <p>If only you could promise that you will try too</p>
+      <p class="pb-2">I'll be there, I'll be there</p>
+      <p>I want to be strong for you</p>
+      <p>If only you could promise that you will try too</p>
+      <p class="pb-2">I'll be there, I'll be there</p>
+      <p>I wanted to be stronger</p>
+      <p>I wanted to be everything for you</p>
+      <p>If I could be stronger would you believe</p>
+      <p class="pb-2">That I could love you like you want me to?</p>
+      <p>I wanted to be stronger</p>
+      <p>I wanted to be everything for you</p>
+      <p>If I could be stronger would you believe</p>
+      <p class="pb-2">That I could love you like you want me to?</p>
+      <p>Love me like you want me to</p>
+      <p>Like you want me to</p>
+      <p>Love me like you want me to</p>
+      <p class="pb-2">Like you want me to</p>
+    </section>
+    <section class="volver">
+      <a href="./canciones.html">Volver atras</a>
     </section>
   </main>
-  <!--
-- un link que diga `Volver atrás` y que te lleve a `index.html`.
-- un título `h1` con el nombre de la canción
-- un elemento en línea `span` con el nombre de la banda / artista.
-- un elemento en línea `span` con el nombre del álbum.
-- un elemento en línea `span` con el año de publicación del álbum.
-- una título `h2` que diga: `Letra`
-- párrafos `p` para la letra de la canción.
-  -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
