--- a/clase02/canciones-bautiful-day.html
+++ b/clase02/canciones-bautiful-day.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 2 | Mis canciones favoritas</title>
+  <title>Clase 2 | Beautiful Day</title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas.">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas: Beautiful Day.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase2 | Mis canciones favoritas">
+  <meta property="og:title" name="twitter:title" content="Clase2 | Beautiful Day">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso una lista de canciones favoritas: Beautiful Day.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/material/24/fa314a/photos-folder--v1.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/canciones.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/canciones-beautiful-day.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/material/24/fa314a/photos-folder--v1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
@@ -26,26 +26,12 @@
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Mis canciones favoritas</h1>
+    <h1>Beautiful Day</h1>
   </header>
   <!-- MAIN -->
   <main>
     <section class="canciones">
-      <aside class="cancion1">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/stronger.jpg" width="300" height="225" alt="cancion de Clean Bandit Stronges">
-          <h2>Stronger</h2>
-          <p>Clean Bandit feat. Alex Newell & Sean Bass</p>
-        </a>
-      </aside>
-      <aside class="cancion2">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/boa-sorte.jpg" height="250" width="250" alt="imagen de Ben HArper y Vanessa Da Mata">
-          <h2>Boa Sorte</h2>
-          <p>Ben Harper & Vanesa Da Mata</p>
-        </a>
-      </aside>
-      <aside class="cancion3">
+       <aside class="cancion3">
         <a href="" alt="link a la pagina de la cancion">
           <img src="../assets/images/beautiful-day.jpg" width="355" height="313" alt="imagen de u2 del video clip de la cancion Beautiful day">
           <h2>Beautiful Day</h2>
@@ -53,7 +39,17 @@
         </a>
       </aside>
     </section>
+    <section class="volver">
+      <a href="./canciones.html">Volver atras</a>
+    </section>
   </main>
+    <!--
+- un elemento en línea `span` con el nombre de la banda / artista.
+- un elemento en línea `span` con el nombre del álbum.
+- un elemento en línea `span` con el año de publicación del álbum.
+- una título `h2` que diga: `Letra`
+- párrafos `p` para la letra de la canción.
+  -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
