agrego al cancion de u2

--- a/clase02/canciones-bautiful-day.html
+++ b/clase02/canciones-bautiful-day.html
@@ -30,26 +30,65 @@
   </header>
   <!-- MAIN -->
   <main>
-    <section class="canciones">
-       <aside class="cancion3">
-        <a href="" alt="link a la pagina de la cancion">
-          <img src="../assets/images/beautiful-day.jpg" width="355" height="313" alt="imagen de u2 del video clip de la cancion Beautiful day">
-          <h2>Beautiful Day</h2>
-          <p>U2</p>
-        </a>
-      </aside>
+    <section class="beautiful-day">
+       <p>The heart is a bloom</p>
+       <p>Shoots up through the stony ground</p>
+       <p>There's no room</p>
+       <p class="pb-2">No space to rent in this town</p>
+       <p>You're out of luck</p>
+       <p>And the reason that you had to care</p>
+       <p>The traffic is stuck</p>
+       <p class="pb-2">And you're not moving anywhere</p>
+       <p>You thought you'd found a friend</p>
+       <p>To take you out of this place</p>
+       <p>Someone you could lend a hand</p>
+       <p class="pb-2">In return for grace</p>
+       <p>It's a beautiful day</p>
+       <p>Sky falls, you feel like</p>
+       <p>It's a beautiful day</p>
+       <p class="pb-2">Don't let it get away</p>
+       <p>You're on the road</p>
+       <p>But you've got no destination</p>
+       <p>You're in the mud</p>
+       <p class="pb-2">In the maze of her imagination</p>
+       <p>You love this town</p>
+       <p>Even if that doesn't ring true</p>
+       <p>You've been all over</p>
+       <p class="pb-2">And it's been all over you</p>
+       <p>It's a beautiful day</p>
+       <p>Don't let it get away</p>
+       <p class="pb-2">It's a beautiful day (Oooh, ooh)</p>
+       <p>Touch me</p>
+       <p>Take me to that other place</p>
+       <p>Teach me love</p>
+       <p class="pb-2">I know I'm not a hopeless case</p>
+       <p>See the world in green and blue</p>
+       <p>See China right in front of you</p>
+       <p>See the canyons broken by cloud</p>
+       <p class="pb-2">See the tuna fleets clearing the sea out</p>
+       <p>See the Bedouin fires at night</p>
+       <p>See the oil fields at first light</p>
+       <p>And see the bird with a leaf in her mouth</p>
+       <p class="pb-2">After the flood all the colors came out</p>
+       <p>Day, Day</p>
+       <p class="pb-2">Day, Day</p>
+       <p>It was a beautiful day</p>
+       <p>Don't let it get away</p>
+       <p class="pb-2">Beautiful day</p>
+       <p>Touch me</p>
+       <p>Take me to that other place</p>
+       <p>Reach me</p>
+       <p class="pb-2">I know I'm not a hopeless case</p>
+       <p>What you don't have, you don't need it now</p>
+       <p>What you don't know, you can feel it somehow</p>
+       <p>What you don't have, you don't need it now</p>
+       <p>Don't need it now</p>
+       <p class="pb-2">Was a beautiful day</p>
     </section>
     <section class="volver">
       <a href="./canciones.html">Volver atras</a>
     </section>
   </main>
-    <!--
-- un elemento en línea `span` con el nombre de la banda / artista.
-- un elemento en línea `span` con el nombre del álbum.
-- un elemento en línea `span` con el año de publicación del álbum.
-- una título `h2` que diga: `Letra`
-- párrafos `p` para la letra de la canción.
-  -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
