agrego span en las canciones

--- a/clase02/canciones-bautiful-day.html
+++ b/clase02/canciones-bautiful-day.html
@@ -31,6 +31,10 @@
   <!-- MAIN -->
   <main>
     <section class="beautiful-day">
+      <span>U2</span>
+      <span>All That You Can't Leave Behind</span>
+      <span>2000</span>
+      <h2>Letra</h2>
        <p>The heart is a bloom</p>
        <p>Shoots up through the stony ground</p>
        <p>There's no room</p>
