--- a/clase02/canciones-stronger.html
+++ b/clase02/canciones-stronger.html
@@ -33,6 +33,10 @@
   <!-- MAIN -->
   <main>
     <section class="stronger">
+      <span>Clean Bandit, Sean Bass and Alex Newell </span>
+      <span>New Eyes</span>
+      <span>2014</span>
+      <h2>Letra</h2>
       <p>People tell me to be cautious</p>
       <p>People tell me not to lose my self control</p>
       <p>People tell me to be flawless</p>
